--- a/PROPOSAL-FINAL.ipynb
+++ b/PROPOSAL-FINAL.ipynb
@@ -189,6 +189,7 @@
     }
    ],
    "source": [
+    "# Load our dataset\n",
     "chest_pain_data <- read_csv(\"data.mod\", col_name = FALSE)\n",
     "slice(chest_pain_data,1:6)"
    ]
@@ -199,6 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add colomn names\n",
     "names(chest_pain_data) <- c(\"age\", \"sex\",\n",
     "                         \"chest_pain_type\",\n",
     "                         \"trest_bps\",\n",
@@ -295,6 +297,7 @@
     }
    ],
    "source": [
+    "# convert all categorical variables into a factor using the as_factor() function.\n",
     "chest_pain_data <- mutate(chest_pain_data, sex = as_factor(sex),\n",
     "                          chest_pain_type = as_factor(chest_pain_type),\n",
     "                          fasting_blood_sugar = as_factor(fasting_blood_sugar),\n",
@@ -305,9 +308,22 @@
     "                          thal = as_factor(thal),\n",
     "                          healthy = as_factor(healthy)\n",
     "                          )\n",
-    "                          \n",
-    "slice(chest_pain_data,1:6)               \n",
-    "                   "
+    "slice(chest_pain_data,1:6)               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split our dataset into a training dataset and a testing dataset\n",
+    "# Randomly take 75% of the data in the training set. \n",
+    "# This will be proportional to the different number of fruit names in the dataset.\n",
+    "\n",
+    "chest_pain_data_split <- initial_split(fruit_data, prop = 0.75, strata =... )  \n",
+    "chest_pain_data_train <- training(chest_pain_data_split)   \n",
+    "chest_pain_data_test <- testing(chest_pain_data_split)"
    ]
   },
   {
