I split the dataset into training set and testing set.

--- a/PROPOSAL-FINAL.ipynb
+++ b/PROPOSAL-FINAL.ipynb
@@ -321,9 +321,11 @@
     "# Randomly take 75% of the data in the training set. \n",
     "# This will be proportional to the different number of fruit names in the dataset.\n",
     "\n",
-    "chest_pain_data_split <- initial_split(fruit_data, prop = 0.75, strata =... )  \n",
+    "chest_pain_data_split <- initial_split(fruit_data, prop = 0.75, strata =chest_pain_type )  \n",
     "chest_pain_data_train <- training(chest_pain_data_split)   \n",
-    "chest_pain_data_test <- testing(chest_pain_data_split)"
+    "chest_pain_data_test <- testing(chest_pain_data_split)\n",
+    "slice(chest_pain_data_train,1:6) \n",
+    "slice(chest_pain_data_train,1:6) "
    ]
   },
   {
