--- a/Classification Analysis.ipynb
+++ b/Classification Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -104,19 +104,18 @@
     }
    ],
    "source": [
+    "# Load dataset\n",
     "url <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\"\n",
     "\n",
-    "\n",
-    "# Load our dataset\n",
     "chest_pain_data <- read_csv(url, col_name = FALSE)\n",
     "slice(chest_pain_data,1:6)\n",
     "\n",
-    "set.seed(1000)"
+    "set.seed(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -178,6 +177,66 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`summarise()` ungrouping output (override with `.groups` argument)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 4 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>chest_pain_type</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td> 23</td></tr>\n",
+       "\t<tr><td>2</td><td> 50</td></tr>\n",
+       "\t<tr><td>3</td><td> 86</td></tr>\n",
+       "\t<tr><td>4</td><td>144</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " chest\\_pain\\_type & n\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 1 &  23\\\\\n",
+       "\t 2 &  50\\\\\n",
+       "\t 3 &  86\\\\\n",
+       "\t 4 & 144\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4 × 2\n",
+       "\n",
+       "| chest_pain_type &lt;fct&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| 1 |  23 |\n",
+       "| 2 |  50 |\n",
+       "| 3 |  86 |\n",
+       "| 4 | 144 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  chest_pain_type n  \n",
+       "1 1                23\n",
+       "2 2                50\n",
+       "3 3                86\n",
+       "4 4               144"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -199,136 +258,20 @@
     "# select columns we're using and convert chest_pain_type to factor\n",
     "chest_pain_data <- select(chest_pain_data, age, chest_pain_type, trest_bps, cholesterol, max_heart_rate) %>%\n",
     "    mutate(chest_pain_type = as_factor(chest_pain_type))\n",
+    "slice(chest_pain_data,1:6)\n",
     "\n",
-    "slice(chest_pain_data,1:6)"
+    "# show class distribution\n",
+    "class_totals <- chest_pain_data %>%\n",
+    "    group_by(chest_pain_type) %>%\n",
+    "    summarise(n = n()) \n",
+    "class_totals\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 6 × 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>age</th><th scope=col>chest_pain_type</th><th scope=col>trest_bps</th><th scope=col>cholesterol</th><th scope=col>max_heart_rate</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>67</td><td>4</td><td>160</td><td>286</td><td>108</td></tr>\n",
-       "\t<tr><td>37</td><td>3</td><td>130</td><td>250</td><td>187</td></tr>\n",
-       "\t<tr><td>41</td><td>2</td><td>130</td><td>204</td><td>172</td></tr>\n",
-       "\t<tr><td>56</td><td>2</td><td>120</td><td>236</td><td>178</td></tr>\n",
-       "\t<tr><td>62</td><td>4</td><td>140</td><td>268</td><td>160</td></tr>\n",
-       "\t<tr><td>57</td><td>4</td><td>120</td><td>354</td><td>163</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " age & chest\\_pain\\_type & trest\\_bps & cholesterol & max\\_heart\\_rate\\\\\n",
-       " <dbl> & <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 67 & 4 & 160 & 286 & 108\\\\\n",
-       "\t 37 & 3 & 130 & 250 & 187\\\\\n",
-       "\t 41 & 2 & 130 & 204 & 172\\\\\n",
-       "\t 56 & 2 & 120 & 236 & 178\\\\\n",
-       "\t 62 & 4 & 140 & 268 & 160\\\\\n",
-       "\t 57 & 4 & 120 & 354 & 163\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 5\n",
-       "\n",
-       "| age &lt;dbl&gt; | chest_pain_type &lt;fct&gt; | trest_bps &lt;dbl&gt; | cholesterol &lt;dbl&gt; | max_heart_rate &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| 67 | 4 | 160 | 286 | 108 |\n",
-       "| 37 | 3 | 130 | 250 | 187 |\n",
-       "| 41 | 2 | 130 | 204 | 172 |\n",
-       "| 56 | 2 | 120 | 236 | 178 |\n",
-       "| 62 | 4 | 140 | 268 | 160 |\n",
-       "| 57 | 4 | 120 | 354 | 163 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  age chest_pain_type trest_bps cholesterol max_heart_rate\n",
-       "1 67  4               160       286         108           \n",
-       "2 37  3               130       250         187           \n",
-       "3 41  2               130       204         172           \n",
-       "4 56  2               120       236         178           \n",
-       "5 62  4               140       268         160           \n",
-       "6 57  4               120       354         163           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 6 × 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>age</th><th scope=col>chest_pain_type</th><th scope=col>trest_bps</th><th scope=col>cholesterol</th><th scope=col>max_heart_rate</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>63</td><td>1</td><td>145</td><td>233</td><td>150</td></tr>\n",
-       "\t<tr><td>67</td><td>4</td><td>120</td><td>229</td><td>129</td></tr>\n",
-       "\t<tr><td>53</td><td>4</td><td>140</td><td>203</td><td>155</td></tr>\n",
-       "\t<tr><td>52</td><td>3</td><td>172</td><td>199</td><td>162</td></tr>\n",
-       "\t<tr><td>49</td><td>2</td><td>130</td><td>266</td><td>171</td></tr>\n",
-       "\t<tr><td>58</td><td>2</td><td>120</td><td>284</td><td>160</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " age & chest\\_pain\\_type & trest\\_bps & cholesterol & max\\_heart\\_rate\\\\\n",
-       " <dbl> & <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 63 & 1 & 145 & 233 & 150\\\\\n",
-       "\t 67 & 4 & 120 & 229 & 129\\\\\n",
-       "\t 53 & 4 & 140 & 203 & 155\\\\\n",
-       "\t 52 & 3 & 172 & 199 & 162\\\\\n",
-       "\t 49 & 2 & 130 & 266 & 171\\\\\n",
-       "\t 58 & 2 & 120 & 284 & 160\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 5\n",
-       "\n",
-       "| age &lt;dbl&gt; | chest_pain_type &lt;fct&gt; | trest_bps &lt;dbl&gt; | cholesterol &lt;dbl&gt; | max_heart_rate &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| 63 | 1 | 145 | 233 | 150 |\n",
-       "| 67 | 4 | 120 | 229 | 129 |\n",
-       "| 53 | 4 | 140 | 203 | 155 |\n",
-       "| 52 | 3 | 172 | 199 | 162 |\n",
-       "| 49 | 2 | 130 | 266 | 171 |\n",
-       "| 58 | 2 | 120 | 284 | 160 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  age chest_pain_type trest_bps cholesterol max_heart_rate\n",
-       "1 63  1               145       233         150           \n",
-       "2 67  4               120       229         129           \n",
-       "3 53  4               140       203         155           \n",
-       "4 52  3               172       199         162           \n",
-       "5 49  2               130       266         171           \n",
-       "6 58  2               120       284         160           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split our dataset into a training dataset and a testing dataset\n",
     "# Randomly take 75% of the data in the training set. \n",
@@ -336,15 +279,12 @@
     "\n",
     "chest_pain_data_split <- initial_split(chest_pain_data, prop = 0.75, strata =chest_pain_type )  \n",
     "chest_pain_data_train <- training(chest_pain_data_split)   \n",
-    "chest_pain_data_test <- testing(chest_pain_data_split)\n",
-    "\n",
-    "slice(chest_pain_data_train,1:6) \n",
-    "slice(chest_pain_data_test,1:6) "
+    "chest_pain_data_test <- testing(chest_pain_data_split)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +374,7 @@
    "source": [
     "# recipe and standardization\n",
     "cp_recipe <- recipe(chest_pain_type~age+trest_bps+cholesterol+max_heart_rate, data = chest_pain_data_train) %>%\n",
-    "  #  step_upsample(Class, over_ratio = 1, skip = FALSE) %>%         # fix imbalances\n",
+    "  #  step_upsample(chest_pain_type, over_ratio = 1, skip = FALSE) %>%         # fix imbalances\n",
     "    step_scale(all_predictors()) %>%\n",
     "    step_center(all_predictors())\n",
     "\n",
