--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Predicting Chest Pain Type\n",
+    "#### Chest Pain Types Prediction\n",
     "Written by: Heidi Lantz, Ashika Kamboj, Tracy Wang, Kirby Lam"
    ]
   },
